fix difftest for csrrw and csrrs

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -28,19 +28,24 @@ INCFLAGS = $(addprefix -I, $(INC_PATH))
 C_FLAGS += -CFLAGS "$(INCFLAGS)"
 C_FLAGS += -CFLAGS "-D__GUEST_ISA__=riscv32"
 
-IMAGE ?= $(NPC_HOME)/../am-kernels/tests/cpu-tests/build/dummy-riscv32e-npc.bin
+IMAGE ?= $(NEMU_HOME)/am-kernels/tests/cpu-tests/build/dummy-riscv32e-npc.bin
 
-# NPC_FLAGS += -b
-ifdef CONFIG_DIFFTEST
-NPC_FLAGS += -d $(NEMU_HOME)/build/riscv32-nemu-interpreter-so 
+# Read the CONFIG_DIFFTEST definition from autoconf.h
+CONFIG_DIFFTEST := $(shell grep -E '^#define CONFIG_DIFFTEST[ \t]+1' $(NPC_HOME)/csrc/include/generated/autoconf.h | awk '{print $$3}')
+
+# Check if CONFIG_DIFFTEST is defined and equals 1
+ifeq ($(CONFIG_DIFFTEST), 1)
+    NPC_FLAGS += -d $(NEMU_HOME)/build/riscv32-nemu-interpreter-so 
 endif
-NPC_FLAGS += -i $(IMAGE) 
-NPC_FLAGS += -l $(BUILD_DIR)/npc-log.
+
+NPC_FLAGS += -b
+NPC_FLAGS += -i $(IMAGE)
+NPC_FLAGS += -l $(BUILD_DIR)/npc-log.txt
 
 VSRCS = $(shell find $(abspath ./vsrc) -name "*.v")
 CSRCS = $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
 
-default: sim
+default: run
 
 compile:
 	@rm -rf $(OBJ_DIR)
@@ -49,7 +54,7 @@ compile:
 	$(VERILATOR) $(C_FLAGS) $(VERILATOR_FLAGS) $(CSRCS) $(VSRCS) \
 	--Mdir $(OBJ_DIR) -o $(BUILD_DIR)/$(VNAME) -LDFLAGS "-lLLVM-14 -lreadline -lSDL2"
 
-sim: compile
+run: compile
 	$(BUILD_DIR)/$(VNAME) $(NPC_FLAGS)
 
 wave:
@@ -57,6 +62,8 @@ wave:
 
 menuconfig:
 	cd csrc && make menuconfig && cd ..
+
+sim: run wave
 
 clean:
 	rm -rf $(BUILD_DIR)
