before modify idu

--- a/npc/Makefile
+++ b/npc/Makefile
@@ -57,7 +57,7 @@ NPC_FLAGS += --log=$(BUILD_DIR)/npc-log.txt
 NPC_FLAGS += -b
 NPC_FLAGS += -i $(IMAGE)
 
-VSRCS += $(shell find $(abspath ./vsrc) -path $(abspath ./vsrc/templates) -prune -o -name "*.v" -print)
+VSRCS += $(shell find $(abspath $(NPC_HOME)/vsrc) -name "*.v" -print)
 VSRCS += $(shell find $(SOC_HOME)/perip -name "*.v" -print)
 VSRCS += $(shell find $(SOC_HOME)/build -name "*.v" -print)
 CSRCS += $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
