--- a/npc/Makefile
+++ b/npc/Makefile
@@ -54,7 +54,7 @@ endif
 
 # NPC_FLAGS += $(ARGS)
 NPC_FLAGS += --log=$(BUILD_DIR)/npc-log.txt
-# NPC_FLAGS += -b
+NPC_FLAGS += -b
 NPC_FLAGS += -i $(IMAGE)
 
 VSRCS += $(shell find $(abspath $(NPC_HOME)/vsrc) -name "*.v" -print)
