--- a/npc/Makefile
+++ b/npc/Makefile
@@ -1,28 +1,12 @@
-ifeq ($(ARCH), riscv32e-ysyxSoC)
-TOPNAME = ysyxSoCFull
-else ifeq ($(ARCH), riscv32e-npc)
-TOPNAME = ysyx_23060124
-else
-TOPNAME = ysyxSoCFull  # 默认值，可以根据你的实际情况设置
-endif
-
-NXDC_FILES = constr/top.nxdc
-
+TOPNAME = top
 VNAME = V$(TOPNAME)
-SOC_HOME := $(abspath $(NEMU_HOME)/../ysyxSoC)
 
 BUILD_DIR = $(NPC_HOME)/build
 OBJ_DIR = $(BUILD_DIR)/obj_dir
+# LOG_DIR = $(NPC_HOME)/logs
+# BIN = $(BUILD_DIR)/$(TOPNAME)
 
 $(shell mkdir -p $(BUILD_DIR))
-
-# constraint file
-SRC_AUTO_BIND = $(abspath $(BUILD_DIR)/auto_bind.cpp)
-$(SRC_AUTO_BIND): $(NXDC_FILES)
-	python3 $(NVBOARD_HOME)/scripts/auto_pin_bind.py $^ $@
-
-# rules for NVBoard
-include $(NVBOARD_HOME)/scripts/nvboard.mk
 
 # Verilator
 VERILATOR=verilator
@@ -42,14 +26,12 @@ VERILATOR_FLAGS += -j 8
 
 
 LIBS += $(shell llvm-config --libs)
-INC_PATH += $(NPC_HOME)/csrc/include $(NPC_HOME)/csrc/isa/include $(LIBS)
-INC_PATH += $(shell sdl2-config --cflags | sed 's/-I//g')
-
-UART16550_DIR := $(SOC_HOME)/perip/uart16550/rtl
-SPI_DIR := $(SOC_HOME)/perip/spi/rtl
-
+INC_PATH := $(NPC_HOME)/csrc/include $(NPC_HOME)/csrc/isa/include $(INC_PATH) $(LIBS)
+INCFLAGS = $(addprefix -I, $(INC_PATH))
 C_FLAGS += -CFLAGS "$(INCFLAGS)"
 C_FLAGS += -CFLAGS "-D__GUEST_ISA__=riscv32"
+
+IMAGE ?= $(NEMU_HOME)/../am-kernels/tests/cpu-tests/build/dummy-riscv32e-npc.bin
 
 # Read the CONFIG_DIFFTEST definition from autoconf.h
 CONFIG_DIFFTEST := $(shell grep -E '^#define CONFIG_DIFFTEST[ \t]+1' $(NPC_HOME)/csrc/include/generated/autoconf.h | awk '{print $$3}')
@@ -59,33 +41,22 @@ ifeq ($(CONFIG_DIFFTEST), 1)
     NPC_FLAGS += -d $(NEMU_HOME)/build/riscv32-nemu-interpreter-so 
 endif
 
-# NPC_FLAGS += $(ARGS)
-NPC_FLAGS += --log=$(BUILD_DIR)/npc-log.txt
-NPC_FLAGS += -b
+# NPC_FLAGS += -b
+# NPC_FLAGS += -e $(IMAGE).elf
 NPC_FLAGS += -i $(IMAGE)
+NPC_FLAGS += -l $(BUILD_DIR)/npc-log.txt
 
-VSRCS += $(shell find $(abspath $(NPC_HOME)/vsrc) -name "*.v" -print)
-VSRCS += $(shell find $(SOC_HOME)/perip -name "*.v" -print)
-VSRCS += $(shell find $(SOC_HOME)/build -name "*.v" -print)
-CSRCS += $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
-CSRCS += $(SRC_AUTO_BIND)
-
-LDFLAGS += -lLLVM-14 -lreadline 
-LDFLAGS += -lSDL2 -lSDL2_image
-
-INCFLAGS = $(addprefix -I, $(INC_PATH))
-CXXFLAGS += $(INCFLAGS) -DTOP_NAME="\"V$(TOPNAME)\""
+VSRCS = $(shell find $(abspath ./vsrc) -path $(abspath ./vsrc/templates) -prune -o -name "*.v" -print)
+CSRCS = $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
 
 default: run
 
-compile: $(VSRCS) $(CSRCS) $(NVBOARD_ARCHIVE)
+compile:
 	@rm -rf $(OBJ_DIR)
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
-	$(VERILATOR) $(C_FLAGS) $(VERILATOR_FLAGS) \
-	--top-module $(TOPNAME) $^ \
-	$(addprefix -CFLAGS , $(CXXFLAGS)) \
-	--Mdir $(OBJ_DIR) --exe -o $(BUILD_DIR)/$(VNAME) \
-	$(addprefix -LDFLAGS , $(LDFLAGS))\
+	@echo "runing simulation for test module "
+	$(VERILATOR) $(C_FLAGS) $(VERILATOR_FLAGS) $(CSRCS) $(VSRCS) \
+	--Mdir $(OBJ_DIR) -o $(BUILD_DIR)/$(VNAME) -LDFLAGS "-lLLVM-14 -lreadline -lSDL2"
 
 run: compile
 	$(BUILD_DIR)/$(VNAME) $(NPC_FLAGS)
@@ -100,6 +71,4 @@ sim: run wave
 
 clean:
 	rm -rf $(BUILD_DIR)
-
-.PHONY: default menuconfig clean run
 
