--- a/soc/Makefile
+++ b/soc/Makefile
@@ -58,7 +58,7 @@ NPC_FLAGS += --log=$(BUILD_DIR)/npc-log.txt
 NPC_FLAGS += -b
 NPC_FLAGS += -i $(IMAGE)
 
-VSRCS += $(shell find $(abspath $(SOC_HOME)/vsrc) -name "*.v" -print)
+VSRCS += $(shell find $(abspath $(SOC_HOME)/vsrc) \( -name "*.v" -o -name "*.sv" \) -print)
 VSRCS += $(shell find $(YSYX_SOC_HOME)/perip -name "*.v" -print)
 VSRCS += $(shell find $(YSYX_SOC_HOME)/build -name "*.v" -print)
 CSRCS += $(shell find $(abspath ./csrc) -name "*.c" -or -name "*.cc" -or -name "*.cpp")
