--- a/soc/Makefile
+++ b/soc/Makefile
@@ -23,9 +23,12 @@ VERILATOR=verilator
 # Generate C++ in executable form
 VERILATOR_FLAGS += --top-module $(TOPNAME) +incdir+vsrc/include
 VERILATOR_FLAGS += +incdir+$(UART16550_DIR) +incdir+$(SPI_DIR)
-VERILATOR_FLAGS += --lint-only
-VERILATOR_FLAGS += -Wall 
-VERILATOR_FLAGS += -Wno-DECLFILENAME
+VERILATOR_FLAGS += --autoflush
+VERILATOR_FLAGS += -Wno-style
+
+# VERILATOR_FLAGS += --lint-only
+# VERILATOR_FLAGS += -Wall 
+# VERILATOR_FLAGS += -Wno-DECLFILENAME
 # VERILATOR_FLAGS += --report-only 
 # VERILATOR_FLAGS += -Werror-
 
